dynamic Progress bar added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
 <div class="player">
-    <video src="Waves.mp4" class="video" playsinline autoplay></video>
+    <video src="Waves.mp4" class="video" playsinline></video>
     <!-- show Controls -->
     <div class="show-controls">
     <!-- Controls Container -->
@@ -24,7 +24,7 @@
             <div class="controls-left">
                 <!-- Play/Pause -->
                 <div class="play-controls">
-                    <i class="fas fa-play"></i>
+                    <i class="fas fa-play" id="play-btn" title="Play"></i>
                 </div>
                 <!-- Volume -->
                 <div class="volume">
