--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
                         <i class="fas fa-volume-up" title="Mute" id="volume-icon"></i>
                     </div>
                     <div class="volume-range" title="Change Volume">
-                        <div class="volume-bar">
-
-                        </div>
+                        <div class="volume-bar"></div>
                     </div>
                 </div>
             </div>
